kubernetes/apps/external/proxmox-backup-server/resources/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app proxmox-backup-server
  labels:
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.73.2.10
    conditions:
      ready: true
ports:
  - name: https
    port: 8007
