kubernetes/apps/external/proxmox-backup-server/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-backup-server
spec:
  externalName: "${NFS_SERVER}"
  type: ExternalName
  ports:
  - name: https
    port: 8007
    targetPort: 8007
