kubernetes/apps/external/proxmox-backup-server/resources/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app proxmox-backup-server
spec:
  hostnames: ["pbs.${DOMAIN_APP_APPS}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-app-apps
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 443
