kubernetes/apps/external/proxmox-backup-server/resources/tlsroute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: &app proxmox-backup-server
spec:
  hostnames: ["pbs.${DOMAIN_APP}"]
  parentRefs:
    - name: services
      namespace: kube-system
      sectionName: tls-app
  rules:
    - backendRefs:
        - name: *app
          port: 443
